--- a/views/index.html
+++ b/views/index.html
@@ -20,6 +20,7 @@
       <tr>
         <strong> Models </strong>
         <select id="elt-select2" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
+        <label id="test-label"> TTTT </label>
       </tr>
       <tr>
         <td><div id="stl-viewer-container">
@@ -72,6 +73,8 @@
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
     <link href="stylesheets/style.css" rel="stylesheet">
   </div>
+
+
 
 </div>
 </html>
