--- a/views/index.html
+++ b/views/index.html
@@ -20,6 +20,12 @@
       <tr>
         <strong> Models </strong>
         <select id="elt-select2" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
+        <div id="test-div-1">
+          
+        </div>
+        <div id="test-div-2">
+          
+        </div>
       </tr>
       <tr>
         <td><div id="stl-viewer-container">
