--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,11 @@
         <select id="elt-select2" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
       </tr>
       <tr>
+        <div id="test-div-1">
+          
+        </div>
+      </tr>
+      <tr>
         <td><div id="stl-viewer-container">
           <button class="btn btn-primary btn-sm clearfix" id="stl-tolerance-btn" data-toggle="modal" data-target="#stl-tolerance-modal">
             Change STL Tolerance
