--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,9 @@
         <select id="elt-select2" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
       </tr>
       <tr>
-        <div id="test-div-1">
-          
-        </div>
+          <ul id="inputs-ul">
+            
+          </ul>
       </tr>
       <tr>
         <td><div id="stl-viewer-container">
