--- a/views/index.html
+++ b/views/index.html
@@ -22,9 +22,11 @@
         <select id="elt-select2" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
       </tr>
       <tr>
-          <ul id="inputs-ul">
+        <p>
+          <div id="inputs-ul">
             
-          </ul>
+          </div>
+        </p>
       </tr>
       <tr>
         <td><div id="stl-viewer-container">
