--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,7 @@
       </tr>
       <tr>
         <p>
-          <div id="inputs-ul">
+          <div id="inputs-ul" margin="20px">
             
           </div>
         </p>
