--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,9 @@
           <div id="inputs-ul" margin="20px">
             
           </div>
+            <button  id="config-btn">
+             Apply configuration
+            </button>
         </p>
       </tr>
       <tr>
