--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
           <div id="inputs-ul" margin="20px">
             
           </div>
-            <button  id="config-btn">
+            <button class="btn btn-primary btn-sm clearfix" id="config-btn" data-toggle="modal" >
              Apply configuration
             </button>
         </p>
