--- a/views/index.html
+++ b/views/index.html
@@ -29,6 +29,9 @@
             <button class="btn btn-primary btn-sm clearfix" id="config-btn">
              Apply configuration
             </button>
+            <button class="btn btn-primary btn-sm clearfix" id="test-btn">
+              TEST
+             </button>
         </p>
       </tr>
       <tr>
