--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,14 @@
 
   <div id="stl-menu-bar">
     <table>
+        <tr>
+            <strong> Documents </strong>
+            <select id="doc-select" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
+          </tr>
+          <tr>
+              <strong> Workplaces </strong>
+              <select id="workPlaces-select" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
+            </tr>
       <tr>
         <strong> Models </strong>
         <select id="elt-select2" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
