--- a/views/index.html
+++ b/views/index.html
@@ -18,12 +18,13 @@
   <div id="stl-menu-bar">
     <table>
         <tr>
-            <strong> Documents </strong>
-            <select id="doc-select" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
+          <p>            <strong> Documents </strong>
+            <select id="doc-select" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select></p>
           </tr>
           <tr>
-              <strong> Workplaces </strong>
+            <p>              <strong> Workplaces </strong>
               <select id="workPlaces-select" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
+            </p>
             </tr>
       <tr>
         <strong> Models </strong>
