--- a/views/index.html
+++ b/views/index.html
@@ -18,12 +18,14 @@
   <div id="stl-menu-bar">
     <table>
         <tr>
-          <p>            <strong> Documents </strong>
-            <select id="doc-select" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select></p>
+          <p>            
+            <strong> Documents </strong>
+            <select id="doc-select"></select></p>
           </tr>
           <tr>
-            <p>              <strong> Workplaces </strong>
-              <select id="workPlaces-select" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
+            <p>              
+              <strong> Workplaces </strong>
+              <select id="wp-select"></select>
             </p>
             </tr>
       <tr>
