--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,8 @@
         <tr>
           <p>            
             <strong> Documents </strong>
-            <select id="doc-select"></select></p>
+            <select id="doc-select"></select>
+          </p>
           </tr>
           <tr>
             <p>              
