--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,7 @@
             </tr>
       <tr>
         <strong> Models </strong>
-        <select id="elt-select2" onchange="window.location.href = this.children[this.selectedIndex].getAttribute('href');"></select>
+        <select id="elt-select2"></select>
       </tr>
       <tr>
         <p>
