--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,9 @@
           <button class="btn btn-primary btn-sm clearfix" id="stl-tolerance-btn" data-toggle="modal" data-target="#stl-tolerance-modal">
             Change STL Tolerance
           </button>
-
+          <button class="btn btn-primary btn-sm clearfix" id="testbut" data-toggle="modal" >
+              TEST
+            </button>
           <div class="modal fade clearfix" id="stl-tolerance-modal" tabindex="-1" role="dialog" aria-labelledby="stlToleranceModalLabel" aria-hidden="true">
             <div class="modal-dialog">
               <div class="modal-content">
