--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,7 @@
             Change STL Tolerance
           </button>
           <p>
-              <button  class="btn btn-primary btn-sm clearfix" id="testButton" onclick="window.location.href = 'https://secret-tundra-50844.herokuapp.com/oauthSignin'"> Auth </button>
+              <button  class="btn btn-primary btn-sm clearfix" id="testButton" onclick="window.location.pathname  = '/oauthSignin'"> Auth </button>
         </p>
           <div class="modal fade clearfix" id="stl-tolerance-modal" tabindex="-1" role="dialog" aria-labelledby="stlToleranceModalLabel" aria-hidden="true">
             <div class="modal-dialog">
