--- a/views/index.html
+++ b/views/index.html
@@ -15,86 +15,98 @@
 
 <div id="stl-container">
 
-  <div id="stl-menu-bar">
-    <table>
-        <tr>
-          <p>            
-            <strong> Documents </strong>
-            <select id="doc-select"></select>
-          </p>
-          </tr>
-          <tr>
-            <p>              
-              <strong> Workplaces </strong>
-              <select id="wp-select"></select>
+  <div id= "chooseSTL"> 
+    <div id = "documentsDiv">
+        <div id="docHeader">
+            Please choose path to model
+        </div>
+        <div id="docContent">
+            <p>            
+              <strong> Documents </strong>
+              <br>
+              <select id="doc-select"></select>
             </p>
-            </tr>
-      <tr>
-        <strong> Models </strong>
-        <select id="elt-select2" ></select>
-      </tr>
-      <tr>
-        <p>
+              <p>              
+                <strong> Workplaces </strong>
+                <br>
+                <select id="wp-select"></select>
+              </p>
+              <p>
+                <strong> Models </strong>
+                <br>
+                <select id="elt-select2" ></select>
+              </p>
+        </div>
+     </div>
+    <div id = "configDiv">
+        <div id="configHeader">
+            Configuration
+        </div>
+        <div id="configContent">
           <div id="inputs-ul" margin="20px">
-            
           </div>
-            <button class="btn btn-primary btn-sm clearfix" id="config-btn">
-             Apply configuration
-            </button>
-        </p>
-      </tr>
-      <tr>
-        <td><div id="stl-viewer-container">
-          <button class="btn btn-primary btn-sm clearfix" id="stl-tolerance-btn" data-toggle="modal" data-target="#stl-tolerance-modal">
-            Change STL Tolerance
-          </button>
-          <p>
-        </p>
-          <div class="modal fade clearfix" id="stl-tolerance-modal" tabindex="-1" role="dialog" aria-labelledby="stlToleranceModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                  <h4 class="modal-title" id="stlToleranceModalLabel">Change STL Tolerances</h4>
-                  <h4><small class="text-danger">Warning! Setting tolerances too low could freeze model!</small></h4>
-                </div>
-                <div class="modal-body" id="stl-tolerance-form">
-                  <form role="form">
-                    <div class="form-group">
-                      <label for="angle-tolerance">Angle Tolerance</label>
-                      <input type="number" value="0.01" step="0.01" class="form-control" id="angle-tolerance">
-                    </div>
-                    <div class="form-group">
-                      <label for="chord-tolerance">Chord Tolerance</label>
-                      <input type="number" value="0.01" step="0.01" class="form-control" id="chord-tolerance">
-                    </div>
-                  </form>
-                </div>
-                <div class="modal-footer">
-                  <span class="text-info inline">This operation will reload the model!</span>
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                  <button type="button" class="btn btn-primary" id="stl-tolerance-submit">Submit</button>
-                </div>
+
+        </div>
+     </div>
+     <div id="buttons">
+      <button class="btn btn-primary btn-sm clearfix" id="config-btn">
+        Apply configuration
+       </button>
+       <div id="stl-viewer-container">
+        <button class="btn btn-primary btn-sm clearfix" id="stl-tolerance-btn" data-toggle="modal" data-target="#stl-tolerance-modal">
+          Change STL Tolerance
+        </button>
+        <p>
+      </p>
+        <div class="modal fade clearfix" id="stl-tolerance-modal" tabindex="-1" role="dialog" aria-labelledby="stlToleranceModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="stlToleranceModalLabel">Change STL Tolerances</h4>
+                <h4><small class="text-danger">Warning! Setting tolerances too low could freeze model!</small></h4>
+              </div>
+              <div class="modal-body" id="stl-tolerance-form">
+                <form role="form">
+                  <div class="form-group">
+                    <label for="angle-tolerance">Angle Tolerance</label>
+                    <input type="number" value="0.01" step="0.01" class="form-control" id="angle-tolerance">
+                  </div>
+                  <div class="form-group">
+                    <label for="chord-tolerance">Chord Tolerance</label>
+                    <input type="number" value="0.01" step="0.01" class="form-control" id="chord-tolerance">
+                  </div>
+                </form>
+              </div>
+              <div class="modal-footer">
+                <span class="text-info inline">This operation will reload the model!</span>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="stl-tolerance-submit">Submit</button>
               </div>
             </div>
           </div>
         </div>
-        </td>
-      </tr>
-
-    </table>
-  </div>
-
-  <div id="stl-viewport">
-    <div class="progress hidden clearfix" id="stl-progress-bar" style="display:none">
-      <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
-        <span>Loading...</span>
+      </div>
+</div>
+ </div>
+<div id="STLViever">
+    <div id="STLVieverHeader"> 
+        STL Viever
+    </div>
+    <div id="STLModel">
+      <div id="stl-viewport">
+        <div class="progress hidden clearfix" id="stl-progress-bar" style="display:none">
+          <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
+            <span>Loading...</span>
+          </div>
+        </div>
+    
+        <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+        <link href="stylesheets/style.css" rel="stylesheet">
       </div>
     </div>
+</div>
 
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
-    <link href="stylesheets/style.css" rel="stylesheet">
-  </div>
 
 </div>
 </html>
