--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
 
 <div id="stl-container">
 
-  <div id= "chooseSTL"> 
+  <div id= "stl-menu-bar"> 
     <div id = "documentsDiv">
         <div id="docHeader">
             Please choose path to model
@@ -88,6 +88,7 @@
         </div>
       </div>
 </div>
+
  </div>
 <div id="STLViever">
     <div id="STLVieverHeader"> 
