--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,7 @@ th {
 #stl-menu-bar {
   float: left;
   width: 25%;
+  position: relative;
   height: 100%;
   min-height:100%;
   overflow: scroll;
