--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,7 +22,6 @@ th {
 #stl-menu-bar {
   float: left;
   width: 25%;
-  position: relative;
   height: 100%;
   min-height:100%;
   overflow: scroll;
@@ -44,4 +43,10 @@ th {
   position: fixed;
   top: 50%;
   width: 80%;
+}
+
+#docHeader{
+  margin: 20px;
+  background-color: dodgerblue;
+  color: white;
 }
