--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,8 +46,8 @@ th {
 }
 
 #docHeader{
-  margin: -20px 0px 10px 0px;
-  padding: 20px;
+  margin: -40px -20px 10px 0px;
+  padding: 20px 20px 0px 0px;
   background-color: dodgerblue;
   color: white;
 }
