--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,6 @@ th {
   height: 100%;
   min-height:100%;
   overflow: scroll;
-  margin:20px;
 }
 
 #stl-viewport {
@@ -46,8 +45,11 @@ th {
 }
 
 #docHeader{
-  margin: -20px -20px 10px 0px;
   padding: 10px 10px 0px 0px;
   background-color: dodgerblue;
   color: white;
+}
+
+#docContent{
+  margin: 20px;
 }
