--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,8 +46,9 @@ th {
 
 #docHeader{
   padding: 10px 10px 0px 0px;
-  background-color: dodgerblue;
+  background-color: royalblue;
   color: white;
+  font-weight: bold;
 }
 
 #docContent{
