--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,7 +45,14 @@ th {
 }
 
 #docHeader{
-  padding: 10px 40px 0px 0px;
+  padding: 10px 0px 0px 0px;
+  background-color: royalblue;
+  color: white;
+  font-weight: bold;
+}
+
+#configHeader{
+  padding: 10px 0px 0px 0px;
   background-color: royalblue;
   color: white;
   font-weight: bold;
