--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
         Apply configuration
        </button>
        <div id="stl-viewer-container">
-        <button class="btn btn-primary btn-sm clearfix" id="stl-tolerance-btn" data-toggle="modal" data-target="#stl-tolerance-modal">
+        <button class="btn btn-primary btn-sm clearfix" id="stl-tolerance-btn" data-toggle="modal" data-target="#stl-tolerance-modal" style="float: left">
           Change STL Tolerance
         </button>
         <p>
