--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,7 +52,9 @@ th {
 }
 
 #buttons{
-  margin: 20px;
+  margin-top: 20px;
+  margin-left: 40px;
+  margin-right: 40px; 
 }
 
 #docContent, #configContent{
