--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,8 +53,8 @@ th {
 
 #buttons{
   margin-top: 20px;
-  margin-left: 40px;
-  margin-right: 40px; 
+  margin-left: 20%;
+  margin-right: 20%; 
 }
 
 #docContent, #configContent{
