--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,8 +53,9 @@ th {
 
 #buttons{
   margin-top: 20px;
-  margin-left: 20%;
-  margin-right: 20%; 
+  margin-left: 15%;
+  margin-right: 15%; 
+  margin-bottom: 20px;
 }
 
 #docContent, #configContent{
