--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
               </p>
         </div>
      </div>
-    <div id = "configDiv">
+    <div id = "configDiv" style="visibility: hidden">
         <div id="configHeader">
             Configuration
         </div>
