--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@
               </p>
         </div>
      </div>
-    <div id = "configDiv" style="visibility: hidden">
+    <div id = "configDiv" style="display: none;">
         <div id="configHeader">
             Configuration
         </div>
@@ -92,7 +92,7 @@
  </div>
 <div id="STLViever">
       <div id="stl-viewport">
-        <div class="progress hidden clearfix" id="stl-progress-bar" style="display:none">
+        <div class="progress hidden clearfix" id="stl-progress-bar" >
           <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
             <span>Loading...</span>
           </div>
