--- a/views/index.html
+++ b/views/index.html
@@ -49,11 +49,11 @@
         </div>
      </div>
      <div id="buttons">
-      <button class="btn btn-primary btn-sm clearfix" id="config-btn" >
+      <button class="btn btn-primary btn-sm clearfix" id="config-btn" style="display: none;">
         Apply configuration
        </button>
        <div id="stl-viewer-container">
-        <button class="btn btn-primary btn-sm clearfix" id="stl-tolerance-btn" data-toggle="modal" data-target="#stl-tolerance-modal" >
+        <button class="btn btn-primary btn-sm clearfix" id="stl-tolerance-btn" data-toggle="modal" data-target="#stl-tolerance-modal" style="display: none;">
           Change STL Tolerance
         </button>
         <p>
