--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,17 +58,11 @@ th {
   overflow: scroll;
 }
 
-#config-btn{
+#config-btn, #stl-tolerance-btn{
   margin-top: 20px;
   margin-left: 15%;
   margin-bottom: 20px;
   float: left;
-}
-#stl-tolerance-btn{
-  margin-top: 20px;
-  margin-right: 15%; 
-  margin-bottom: 20px;
-  float: right;
 }
 
 #docContent, #configContent{
