--- a/views/index.html
+++ b/views/index.html
@@ -94,26 +94,9 @@
  </div>
 <div id="STLViever">
       <div id="stl-viewport">
-        <div class="progress hidden clearfix" id="stl-progress-bar" >
-          <div class="wrap">
-            <div class="apps">
-              <div class="app yellow">
-                <div class="top">
-                  <div class="fa fa-heart"></div>
-                </div>
-              </div>
-              <div class="app red">
-                <div class="top">
-                  <div class="fa fa-headphones"></div>
-                </div>
-              </div>
-              <div class="app blue">
-                <div class="top">
-                  <div class="fa fa-cutlery"></div>
-                </div>
-              </div>
-          
-            </div>
+        <div class="progress hidden clearfix" id="stl-progress-bar" style="display:none">
+          <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
+            <span>Loading...</span>
           </div>
         </div>
     
