--- a/views/index.html
+++ b/views/index.html
@@ -94,8 +94,8 @@
  </div>
 <div id="STLViever">
       <div id="stl-viewport">
-        <div class="progress hidden clearfix" id="stl-progress-bar" style="display:none">
-          <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
+        <div class="progress hidden clearfix" id="stl-progress-bar" >
+          <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 75%">
             <span>Loading...</span>
           </div>
         </div>
