--- a/views/index.html
+++ b/views/index.html
@@ -94,10 +94,24 @@
  </div>
 <div id="STLViever">
       <div id="stl-viewport">
-        <div class="progress hidden clearfix" id="stl-progress-bar" >
-          <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 75%">
-            <span>Loading...</span>
-          </div>
+        <div class="progress hidden clearfix" id="stl-progress-bar" style="display:none">
+          <div class="windows8">
+            <div class="wBall" id="wBall_1">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_2">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_3">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_4">
+                <div class="wInnerBall"></div>
+            </div>
+            <div class="wBall" id="wBall_5">
+                <div class="wInnerBall"></div>
+            </div>
+        </div>
         </div>
     
         <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
