--- a/views/index.html
+++ b/views/index.html
@@ -94,7 +94,7 @@
  </div>
 <div id="STLViever">
       <div id="stl-viewport">
-        <div class="progress hidden clearfix" id="stl-progress-bar" style="display:none">
+        <div class="progress hidden clearfix" id="stl-progress-bar" >
           <div class="windows8">
             <div class="wBall" id="wBall_1">
                 <div class="wInnerBall"></div>
