--- a/views/index.html
+++ b/views/index.html
@@ -94,7 +94,7 @@
  </div>
 <div id="STLViever">
       <div id="stl-viewport">
-        <div class="progress hidden clearfix" id="stl-progress-bar" >
+        <div class="progress hidden clearfix" id="stl-progress-bar1" >
           <div class="windows8">
             <div class="wBall" id="wBall_1">
                 <div class="wInnerBall"></div>
@@ -114,8 +114,7 @@
         </div>
         </div>
     
-        <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
-        <link href="stylesheets/style.css" rel="stylesheet">
+
       </div>
 </div>
 
