--- a/views/index.html
+++ b/views/index.html
@@ -114,7 +114,8 @@
         </div>
         </div>
     
-
+        <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+        <link href="stylesheets/style.css" rel="stylesheet">
       </div>
 </div>
 
