--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -46,8 +46,9 @@ th {
   position: fixed;
   top: 35%;
   width: 50%;
-  height: 100px;
+  height: 200;
   background-color: white;
+  border-width: 0px;
 }
 
 #docHeader, #configHeader{
