--- a/views/index.html
+++ b/views/index.html
@@ -95,7 +95,7 @@
 <div id="STLViever">
       <div id="stl-viewport">
         <div class="progress hidden clearfix" id="stl-progress-bar" >
-          <div class="windows8" style="margin-top:40%">
+          <div class="windows8" >
             <div class="wBall" id="wBall_1">
                 <div class="wInnerBall"></div>
             </div>
