--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,8 @@ th {
 
 #stl-progress-bar {
   margin: 30% 30% 30% 30%;
+  width:200px;
+  height:200px;
   background-color: white;
   border-width: 0px;
 }
