--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>STL Viewer</title>
+  <title>{{title }}</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
