--- a/views/index.html
+++ b/views/index.html
@@ -78,6 +78,18 @@
                     <label for="chord-tolerance">Chord Tolerance</label>
                     <input type="number" value="0.1" step="0.1" class="form-control" id="chord-tolerance">
                   </div>
+                  <div class="form-group">
+                    <label for="chord-tolerance">Chord Tolerance</label>
+                    <input type="number" value="0.1" step="0.1" class="form-control" id="chord-tolerance">
+                  </div>
+                  <div>
+                    <strong>STL Format</strong>
+                    <br>
+                    <select id="format-select">
+                      <option value='text'> Text </option>
+                      <option value='binary'> Binary </option>
+                    </select>
+                  </div>
                 </form>
               </div>
               <div class="modal-footer">
