--- a/views/index.html
+++ b/views/index.html
@@ -79,13 +79,13 @@
                     <input type="number" value="0.1" step="0.1" class="form-control" id="chord-tolerance">
                   </div>
                   <div class="form-group">
-                    <label for="chord-tolerance">Chord Tolerance</label>
-                    <input type="number" value="0.1" step="0.1" class="form-control" id="chord-tolerance">
+                    <label for="facet-width">Minimum facet width </label>
+                    <input type="number" value="0.1" step="0.1" class="form-control" id="facet-tolerance">
                   </div>
                   <div>
                     <strong>STL Format</strong>
                     <br>
-                    <select id="format-select">
+                    <select id="format-select" class="form-control">
                       <option value='text'> Text </option>
                       <option value='binary'> Binary </option>
                     </select>
