adding new parameters

--- a/views/index.html
+++ b/views/index.html
@@ -88,18 +88,20 @@
                           <option value='custom'> Custom </option>
                         </select>
                       </div>
-                  <div class="form-group">
-                    <label for="angle-tolerance">Angle Tolerance</label>
-                    <input type="number" value="0.1" step="0.1" class="form-control" id="angle-tolerance">
-                  </div>
-                  <div class="form-group">
-                    <label for="chord-tolerance">Chord Tolerance</label>
-                    <input type="number" value="0.1" step="0.1" class="form-control" id="chord-tolerance">
-                  </div>
-                  <div class="form-group">
-                    <label for="facet-width">Minimum facet width </label>
-                    <input type="number" value="0.1" step="0.1" class="form-control" id="facet-tolerance">
-                  </div>
+                      <div class="form-group" id="stl-parameters" style="display: none;" >
+                        <div class="form-group">
+                          <label for="angle-tolerance">Angle Tolerance</label>
+                          <input type="number" value="0.1" step="0.1" class="form-control" id="angle-tolerance">
+                        </div>
+                        <div class="form-group">
+                          <label for="chord-tolerance">Chord Tolerance</label>
+                          <input type="number" value="0.1" step="0.1" class="form-control" id="chord-tolerance">
+                        </div>
+                        <div class="form-group">
+                          <label for="facet-width">Minimum facet width </label>
+                          <input type="number" value="0.1" step="0.1" class="form-control" id="facet-tolerance">
+                        </div>
+                      </div>
                 </form>
               </div>
               <div class="modal-footer">
