--- a/views/index.html
+++ b/views/index.html
@@ -90,15 +90,15 @@
                       </div>
                       <div class="form-group" id="stl-parameters" style="display: none;" >
                         <div class="form-group">
-                          <label for="angle-tolerance">Angle Tolerance</label>
+                          <label for="angle-tolerance">Angle Tolerance(deg)</label>
                           <input type="number" value="0.1" step="0.1" class="form-control" id="angle-tolerance">
                         </div>
                         <div class="form-group">
-                          <label for="chord-tolerance">Chord Tolerance</label>
+                          <label for="chord-tolerance">Chord Tolerance(in)</label>
                           <input type="number" value="0.1" step="0.1" class="form-control" id="chord-tolerance">
                         </div>
                         <div class="form-group">
-                          <label for="facet-width">Minimum facet width </label>
+                          <label for="facet-width">Minimum facet width(in)</label>
                           <input type="number" value="0.1" step="0.1" class="form-control" id="facet-tolerance">
                         </div>
                       </div>
