--- a/views/index.html
+++ b/views/index.html
@@ -91,7 +91,7 @@
                         </div>
                         <div class="form-group">
                           <label for="facet-width">Minimum facet width(in)</label>
-                          <input type="number" value="0.1" step="0.1" class="form-control" id="facet-tolerance">
+                          <input type="number" value="0.1" step="0.1" class="form-control" id="facet-width">
                         </div>
                       </div>
                 </form>
